--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,23 @@
 cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 14)
 
-project(acts_tests)
+project(fcc-acts_standalone)
 find_package(ACTS COMPONENTS Core Examples TGeoPlugin DD4hepPlugin)
+include_directories(ACTS:ACTSCore ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_library (TestACTS SHARED SuperSimpleDetector.cpp SimpleDetector.cpp)
-target_include_directories(TestACTS PUBLIC ACTS::ACTSCore)
-target_link_libraries (TestACTS PUBLIC  ACTS::ACTSCore)
+add_library (fcc-acts_standalone-detector SHARED Detector/SuperSimpleDetector.cpp Detector/SuperSimpleDetElement.cpp Detector/DetCylinderSurface.cpp Detector/SimpleDetector.cpp)
+target_include_directories(fcc-acts_standalone-detector PUBLIC ACTS::ACTSCore ${CMAKE_CURRENT_SOURCE_DIR}/Utilities ${CMAKE_CURRENT_SOURCE_DIR}/Detector)
+target_link_libraries (fcc-acts_standalone-detector PUBLIC  ACTS::ACTSCore)
 
-add_library (KalmanFitUtils SHARED KalmanFitUtils.cpp)
-target_include_directories(KalmanFitUtils PUBLIC ACTS::ACTSCore ACTS::ACTSExamples)
-target_link_libraries (KalmanFitUtils PUBLIC  ACTS::ACTSCore)
-
-add_executable(acts_tests fittest.cpp)
-target_link_libraries(acts_tests TestACTS ACTS::ACTSCore ACTS::ACTSDD4hepPlugin ACTS::ACTSDD4hepPlugin ACTS::ACTSExamples)
-
-add_executable(main main.cpp)
-target_link_libraries(main KalmanFitUtils TestACTS ACTS::ACTSCore ACTS::ACTSDD4hepPlugin ACTS::ACTSDD4hepPlugin ACTS::ACTSExamples)
+add_library (fcc-acts_standalone-utilites  SHARED Utilities/KalmanFitUtils.cpp Utilities/GenerateDummyMeasurements.cpp)
+target_include_directories(fcc-acts_standalone-utilites PUBLIC ACTS::ACTSCore ACTS::ACTSExamples ${CMAKE_CURRENT_SOURCE_DIR}/Utilities)
+target_link_libraries (fcc-acts_standalone-utilites PUBLIC ACTS::ACTSCore)
 
 
+add_executable(main bin/main.cpp)
+target_link_libraries(main fcc-acts_standalone-detector fcc-acts_standalone-utilites ACTS::ACTSCore ACTS::ACTSDD4hepPlugin ACTS::ACTSDD4hepPlugin ACTS::ACTSExamples)
+
+
+add_custom_target(run
+                  COMMAND ./main)
 
