--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(ROOT)
 find_package(ACTS COMPONENTS Core )
 include_directories(ACTS:ACTSCore ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_library (fcc-acts_standalone-detector SHARED Detector/SuperSimpleDetector.cpp Detector/SuperSimpleDetElement.cpp Detector/DetCylinderSurface.cpp # Detector/SimpleDetector.cpp
+add_library (fcc-acts_standalone-detector SHARED # Detector/SuperSimpleDetector.cpp Detector/SuperSimpleDetElement.cpp Detector/DetCylinderSurface.cpp # Detector/SimpleDetector.cpp
    Detector/SuperSimpleBarrel.cpp)
 target_include_directories(fcc-acts_standalone-detector PUBLIC ACTS::ACTSCore ${CMAKE_CURRENT_SOURCE_DIR}/Utilities ${CMAKE_CURRENT_SOURCE_DIR}/Detector)
 target_link_libraries (fcc-acts_standalone-detector PUBLIC  ACTS::ACTSCore)
@@ -31,17 +31,20 @@ target_link_libraries(main fcc-acts_standalone-detector fcc-acts_standalone-util
 #add_executable(run_example_simple jobs/run_example_simple.cpp)
 #target_link_libraries(run_example_simple main)
 
-add_executable(run_example_supersimple jobs/run_example_supersimple.cpp)
-target_link_libraries(run_example_supersimple main)
+#add_executable(run_example_supersimple jobs/run_example_supersimple.cpp)
+#target_link_libraries(run_example_supersimple main)
 
 
 add_executable(run_example_supersimple_barrel jobs/run_example_supersimple_barrel.cpp)
 target_link_libraries(run_example_supersimple_barrel main)
 
+add_executable(propagator_example bin/propagator_example.cpp)
+target_link_libraries(propagator_example main)
+
 add_custom_target(run
                   COMMAND ./run_example_supersimple
                   COMMAND ./run_example_simple)
- #                 COMMAND ./run_example_0
- #                 COMMAND ./run_example_1
+#                 COMMAND ./run_example_0
+#                 COMMAND ./run_example_1
 #                  COMMAND ./run_example_2)
 
