--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,24 +2,26 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_CXX_STANDARD 14)
 
 project(fcc-acts_standalone)
-find_package(ROOT)
-find_package(Acts COMPONENTS Core )
+#find_package(ROOT)
+find_package(Acts COMPONENTS Core IdentificationPlugin )
 find_package(Eigen3)
 
 
 include_directories(ActsCore ${CMAKE_CURRENT_SOURCE_DIR})
-link_libraries(Eigen3::Eigen)
+link_libraries(Eigen3::Eigen ActsCore )
+
+add_executable(proptest PropTest/main.cpp)
 
 #add_library (fcc-acts_standalone-detector SHARED # Detector/SuperSimpleDetector.cpp Detector/SuperSimpleDetElement.cpp Detector/DetCylinderSurface.cpp # Detector/SimpleDetector.cpp
 #   Detector/SuperSimpleBarrel.cpp)
 #target_include_directories(fcc-acts_standalone-detector PUBLIC ActsCore ${CMAKE_CURRENT_SOURCE_DIR}/Utilities ${CMAKE_CURRENT_SOURCE_DIR}/Detector)
 #target_link_libraries (fcc-acts_standalone-detector PUBLIC  ActsCore)
 
-add_library (fcc-acts_standalone-utilities  SHARED Utilities/KalmanFitUtils.cpp Utilities/GenerateDummyMeasurements.cpp Utilities/read_config.cpp)
-target_include_directories(fcc-acts_standalone-utilities PUBLIC ActsCore  ${CMAKE_CURRENT_SOURCE_DIR}/Utilities)
-target_link_libraries (fcc-acts_standalone-utilities PUBLIC ActsCore )
+#add_library (fcc-acts_standalone-utilities  SHARED Utilities/KalmanFitUtils.cpp Utilities/GenerateDummyMeasurements.cpp Utilities/read_config.cpp)
+#target_include_directories(fcc-acts_standalone-utilities PUBLIC ActsCore  ${CMAKE_CURRENT_SOURCE_DIR}/Utilities)
+#target_link_libraries (fcc-acts_standalone-utilities PUBLIC ActsCore )
 
-add_subdirectory(unittests)
+#add_subdirectory(unittests)
 
 
 #add_library(main bin/main.cpp)
